--- a/contrib/builder/image/Dockerfile
+++ b/contrib/builder/image/Dockerfile
@@ -1,11 +1,48 @@
 FROM acs-reg.alipay.com/alipay/alios6u2:1.0.1-4165050
 MAINTAINER  xiaodong.dxd@alibaba-inc.com
 
-ADD ./mosnd /usr/bin
+ENV TMP_FOLDER      /tmp
+ENV GIT_USER        afe
+
+RUN mkdir -p /home/admin/mosn
+
+RUN yum install -y \
+       ssh wget curl perl logrotate make build-essential procps \
+       tsar tcpdump mpstat iostat vmstat sysstat \
+       python-setuptools; yum clean all
+
+RUN yum install -y -b test aliperf; yum clean all
+
+# 规避crond在docker环境下运行的问题
+RUN echo -e "sleep 10;/bin/touch /var/spool/cron/a;/bin/rm -f /var/spool/cron/a;service crond restart" > /opt/fix-cron.sh
 
 COPY ./etc/script/entrypoint.sh     /usr/local/bin/entrypoint.sh
 
+# supervisor
+RUN easy_install supervisor
+
+# supervisor-stdout
+WORKDIR $TMP_FOLDER
+COPY ./etc/libs/pip/pip-1.5.5.tar.gz ./pip-1.5.5.tar.gz
+RUN tar zvxf pip-1.5.5.tar.gz
+WORKDIR $TMP_FOLDER/pip-1.5.5
+RUN python setup.py install
+RUN pip install supervisor-stdout
+
+# install cpu limit: limit log zip cpu usage
+RUN wget -O cpulimit.zip https://github.com/opsengine/cpulimit/archive/master.zip
+RUN unzip cpulimit.zip
+RUN cd cpulimit-master && make && cp src/cpulimit /usr/bin
+COPY ./etc/mosn/cpulimitedgzip                 /usr/bin/cpulimitedgzip
+RUN  chmod +x /usr/bin/cpulimitedgzip
+
+COPY ./etc/supervisor/supervisord.conf            /etc/supervisord.conf
+COPY ./etc/supervisor/mosn.conf                   /etc/supervisord/conf.d/mosn.conf
+COPY ./etc/mosn/mosn.logrotate                    /etc/logrotate.d/mosn
+RUN mv /etc/cron.daily/logrotate                  /etc/cron.hourly/logrotate
+
 EXPOSE 22 80
 
-ENTRYPOINT ["sh", "/usr/local/bin/entrypoint.sh"]
-CMD ["--help"]
+ADD ./mosnd /usr/bin
+
+ENTRYPOINT ["/usr/bin/supervisord" , "-c" , "/etc/supervisord.conf"]
