refactor sofarpc decode logic log usage; adjust default logger usage

--- a/resource/mosn_config.json
+++ b/resource/mosn_config.json
@@ -1,8 +1,8 @@
 {
+  "default_log_path": "/Users/wugou.cyf/mosn/logs/default.log",
+  "default_log_level": "INFO",
   "servers": [
     {
-      "access_log": "/Users/wugou.cyf/mosn/logs/default.log",
-      "log_level": "INFO",
       "listeners": [
         {
           "name": "egress",
