--- a/resource/mosn_config.json
+++ b/resource/mosn_config.json
@@ -6,7 +6,7 @@
       "listeners": [
         {
           "name": "egress",
-          "address": "127.0.0.1:12200",
+          "address": "0.0.0.0:12200",
           "bind_port": true,
           "network_filters": [
             {
@@ -17,7 +17,7 @@
                 "routes": [
                   {
                     "name": "example_route",
-                    "service": ".*",
+                    "service": "com.alipay.rpc.common.service.facade.pb.SampleServicePb:1.0",
                     "cluster": "remote_service"
                   }
                 ],
