--- a/resource/mosn_config_pt_local.json
+++ b/resource/mosn_config_pt_local.json
@@ -1,11 +1,16 @@
 {
   "servers": [
     {
+      "default_log_path": "/home/admin/mosn/logs/default.log",
+      "default_log_level": "INFO",
+      "graceful_timeout": "60s",
+
       "listeners": [
         {
           "name": "default_sofa",
           "address": "30.55.208.30:12200",
           "bind_port": true,
+          "log_level": "DEBUG",
           "network_filters": [
             {
               "type": "proxy",
@@ -45,11 +50,11 @@
         "lb_type": "LB_RANDOM",
         "max_request_per_conn": 100000,
         "healthcheck": {
-          "timeout": 1000,
+          "timeout": "1s",
           "healthy_threshold": 3,
           "unhealthy_threshold": 5,
-          "interval": 6000,
-          "interval_jitter": 1000
+          "interval": "6s",
+          "interval_jitter": "1s"
         },
         "hosts": [
           {
