1.optimize cluster manager's initialization 2. add dynamic upstream update adapter

--- a/resource/mosn_config_cppdebug.json
+++ b/resource/mosn_config_cppdebug.json
@@ -120,12 +120,12 @@
       },
       {
         "name": "confreg_service1",
-        "type": "CONFREG",
+        "type": "Dynamic_Confreg",
         "lb_type": "LB_RANDOM",
         "hosts": [
           {
             "hostname": "upstream_machine",
-            "address": "11.166.22.163:xxxx",
+            "address": "11.166.22.163:xxx",
             "weight": 10
           }
         ]
