--- a/resource/mosn_config_cppdebug.json
+++ b/resource/mosn_config_cppdebug.json
@@ -24,6 +24,7 @@
               "config": {
                 "downstream_protocol": "SofaRpc",
                 "upstream_protocol": "SofaRpc",
+                "support_dynamic_route":"yes",
                 "routes": [
                   {
                     "name": "cpptest_route",
@@ -59,6 +60,7 @@
               "config": {
                 "downstream_protocol": "SofaRpc",
                 "upstream_protocol": "SofaRpc",
+                "support_dynamic_route":"yes",
                 "routes": [
                   {
                     "name": "example_route",
