proxy-dynamic-config  use type bool

--- a/resource/mosn_config.json
+++ b/resource/mosn_config.json
@@ -25,7 +25,7 @@
               "config": {
                 "downstream_protocol": "SofaRpc",
                 "upstream_protocol": "SofaRpc",
-                "support_dynamic_route":"yes",
+                "c":true,
                 "routes": [
                   {
                     "name": "example_route",
@@ -61,7 +61,7 @@
               "config": {
                 "downstream_protocol": "SofaRpc",
                 "upstream_protocol": "SofaRpc",
-                "support_dynamic_route":"yes",
+                "support_dynamic_route":true,
                 "routes": [
                   {
                     "name": "example_route",
