--- a/resource/mosn_config.json
+++ b/resource/mosn_config.json
@@ -25,7 +25,7 @@
               "config": {
                 "downstream_protocol": "SofaRpc",
                 "upstream_protocol": "SofaRpc",
-                "c":true,
+                "support_dynamic_route":true,
                 "routes": [
                   {
                     "name": "example_route",
