adjust supervisor conf

--- a/etc/supervisor/mosn.conf
+++ b/etc/supervisor/mosn.conf
@@ -1,7 +1,8 @@
 [program:mosn]
-command=mosnd -c /home/admin/mosn/conf/mosn.conf
-user=root
-autostart=false
-autorestart=false
+command=mosnd start -c /home/admin/mosn/conf/mosn.conf
+user=admin
+startsecs=1
+autostart=true
+autorestart=true
 stdout_events_enabled = true
 stderr_events_enabled = true
