--- a/resource/mosn_config.json
+++ b/resource/mosn_config.json
@@ -2,7 +2,7 @@
   "servers": [
     {
       "default_log_path": "/home/admin/mosn/logs/default.log",
-      "default_log_level": "INFO",
+      "default_log_level": "DEBUG",
       "graceful_timeout": "10s",
       "Processor": 1,
       "listeners": [
@@ -19,9 +19,10 @@
                   {
                     "cluster": "confreg_service1",
                     "name": "example_route",
-                    "service": "com.alipay.rpc.common.service.facade.pb.SampleServicePb:1.0x"
+                    "service": "com.alipay.rpc.common.service.facade.pb.SampleServicePb:1.0@"
                   }
                 ],
+                "support_dynamic_route": true,
                 "upstream_protocol": "SofaRpc"
               }
             }
@@ -105,7 +106,7 @@
         ]
       },
       {
-        "Name": "com.alipay.rpc.common.service.facade.pb.SampleServicePb:1.0@DEFAULT",
+        "Name": "com.alipay.rpc.common.service.facade.pb.SampleServicePb:1.0",
         "Type": "DYNAMIC",
         "sub_type": "CONFREG",
         "lb_type": "LB_RANDOM",
@@ -123,7 +124,7 @@
         "spec": {
           "subscribe": [
             {
-              "service_name": "com.alipay.rpc.common.service.facade.pb.SampleServicePb:1.0@DEFAULT"
+              "service_name": "com.alipay.rpc.common.service.facade.pb.SampleServicePb:1.0"
             }
           ]
         }
