change ticker-> timer and make some adjusetment

--- a/resource/mosn_config.json
+++ b/resource/mosn_config.json
@@ -79,7 +79,7 @@
   ],
   "cluster_manager": {
     "auto_discovery": true,
-    "use_health_check_global": true,
+    "registry_use_health_check": true,
     "clusters": [
       {
         "Name": "remote_server",
