--- a/resource/mosn_config.json
+++ b/resource/mosn_config.json
@@ -85,9 +85,13 @@
         "Type": "SIMPLE",
         "sub_type": "",
         "lb_type": "LB_RANDOM",
-        "MaxRequestPerConn":1024,
-        "circuit_breakers":{
-          "	ConnBufferLimitBytes":102400
+        "MaxRequestPerConn": 1024,
+        "circuit_breakers": {
+          "MaxConnections": 0,
+          "MaxPendingRequests": 0,
+          "MaxRequests": 0,
+          "MaxRetries": 0,
+          "ConnBufferLimitBytes": 102400
         },
         "health_check": {
           "Timeout": 0,
@@ -106,6 +110,36 @@
             "Weight": 1
           }
         ]
+      },
+      {
+        "Name": "com.alipay.rpc.common.service.facade.pb.SampleServicePb:1.0",
+        "Type": "DYNAMIC",
+        "sub_type": "CONFREG",
+        "lb_type": "LB_RANDOM",
+        "MaxRequestPerConn": 0,
+        "circuit_breakers": {
+          "MaxConnections": 0,
+          "MaxPendingRequests": 0,
+          "MaxRequests": 0,
+          "MaxRetries": 0,
+          "ConnBufferLimitBytes": 32768
+        },
+        "health_check": {
+          "Timeout": 0,
+          "HealthyThreshold": 0,
+          "UnhealthyThreshold": 0,
+          "Interval": 0,
+          "IntervalJitter": 0,
+          "CheckPath": "",
+          "ServiceName": ""
+        },
+        "spec": {
+          "subscribe": [
+            {
+              "service_name": "com.alipay.rpc.common.service.facade.pb.SampleServicePb:1.0"
+            }
+          ]
+        }
       }
     ]
   },
