--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -77,6 +77,10 @@
   name = "gopkg.in/natefinch/lumberjack.v2"
   version = "2.1.0"
 
+[[constraint]]
+  name = "github.com/fatih/structs"
+  version = "v1.0"
+
 [prune]
   go-tests = true
   unused-packages = true
