debug rds to runable

--- a/resource/mosn_config_new.json
+++ b/resource/mosn_config_new.json
@@ -149,6 +149,9 @@
                       {
                         "Name": "sofa",
                         "RequireTls": "no",
+                        "Domains":[
+                          "*"
+                        ],
                         "Routers": [
                           {
                             "Match": {
@@ -221,6 +224,9 @@
                       {
                         "Name": "sofa",
                         "RequireTls": "no",
+                        "Domains":[
+                          "*"
+                        ],
                         "Routers": [
                           {
                             "Match": {
