1. adjust xds client 2. delete basic routers

--- a/resource/mosn_config_xds.json
+++ b/resource/mosn_config_xds.json
@@ -201,6 +201,9 @@
                       {
                         "Name": "sofa",
                         "RequireTls": "no",
+                        "Domains":[
+                          "*"
+                        ],
                         "Routers": [
                           {
                             "Match": {
@@ -273,7 +276,10 @@
                       {
                         "Name": "sofa",
                         "RequireTls": "no",
-                        "Routers": [
+                        "Domains":[
+                            "*"
+                          ],
+                          "Routers": [
                           {
                             "Match": {
                               "Headers": [
